Fix position and size of popup on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,29 +10,26 @@
 @media only screen and (max-width: 800px) {
     /* For mobile phones: */
 
+    :root body {
+        height: 100%;
+    }
+
     #dark-mode-div {
         top : 12vh;
 
     }
 
     body #pop-up {
-        --pop-up-height: calc(var(--book-height) * 1.5);
-        --pop-up-width: calc(var(--book-width) * 1.5);
+        --pop-up-height: calc(var(--book-height) * 1.2);
+        --pop-up-width: calc(var(--book-width) * 1.2);
         height: var(--pop-up-height);
         width: var(--pop-up-width);
-        background-color: var(--color-light);
-        color: var(--color-text-book);
         position: absolute;
-        bottom: 102%;
+        bottom: -80%;
         left: 50%;
-        /* transform: translate(-50%, 50%); */
-        display: none;
-        opacity: 1;
+        transform: translate(-50%, 50%);
     }
 
-    #pop-up.visible-pop-up {
-        bottom: -100%;
-    }
 
     #page-body {
         width: 100vw;
@@ -42,9 +39,7 @@
         padding: 0px;
     }
   }
-/* * {
-    outline: dashed red;
-} */
+
 
 
 :root {
@@ -347,7 +342,7 @@ main {
     box-shadow: 1px 1px 2px black;
 }
 
-body #pop-up {
+#pop-up {
     --pop-up-height: calc(var(--book-height) * 1.5);
     --pop-up-width: calc(var(--book-width) * 1.5);
     height: var(--pop-up-height);
